Added minor chanes for payment return and send mails

--- a/templates/orders/order_id.html
+++ b/templates/orders/order_id.html
@@ -55,7 +55,7 @@
       </tr>
 
       <tr>
-       <th>Urgency</th>
+       <th>First Draft Deadline</th>
        <td>{{order.get_urgency}}</td>
       </tr>
 
