Refactored payment process. And modified templates

--- a/templates/html/main.html
+++ b/templates/html/main.html
@@ -1,5 +1,9 @@
 {% extends 'index.html' %}
 
+{% block meta_title %}Buy Essay Online | EssayCoffee.com{% endblock %}
+{% block meta_description %}Buy essay online on EssayCoffee.com. Get the best custom written essay money can offer. We will take care of your essay writing project.{% endblock %}
+{% block meta_keywords %}Essay writing service, essay help, custom essay writing, buy, online, cheap, affordable{% endblock %}
+
 {% block start_main_wrapper %}{% endblock %}
 {% block start_content %}{% endblock %}
 {% block content %}
