--- a/templates/index.html
+++ b/templates/index.html
@@ -35,9 +35,9 @@
   <script src="{{ STATIC_URL }}js/jquery.tablesorter.js"></script>
   <script src="{{ STATIC_URL }}js/jquery.slimscroll.js"></script>
   <script src="{{ STATIC_URL }}js/theme_scripts.js"></script>
-  <title>{% block meta_title %}Index{% endblock %}</title>
-  <meta name="description" content="{% block meta_description %}Index{% endblock %}" />
-  <meta name="keywords" content="{% block meta_keywords %}Index{% endblock %}" />
+  <title>{% block meta_title %}{% endblock %}</title>
+  <meta name="description" content="{% block meta_description %}{% endblock %}" />
+  <meta name="keywords" content="{% block meta_keywords %}{% endblock %}" />
 </head>
   <body>
     <div class="wrap">
