--- a/templates/orders/new-order.html
+++ b/templates/orders/new-order.html
@@ -1,5 +1,11 @@
 {% extends 'index.html' %}
+
 {% load render_status %}
+
+{% block meta_title %}Order Essay Online | EssayCoffee.com{% endblock %}
+{% block meta_description %}Order 200% high quality custom Essays Online{% endblock %}
+{% block meta_keywords %}Order, online, essay, buy, buy custom essay, buy quality Order Essays Online, buy affordable essay, buy successful essay, buy essay papers, buy essay writer, buy fast essay, essays to buy, buy essays, purchase Order Essays Online, buy an essay, purchase an essay, purchase essays, buy essay paper, buy best essay, buy cheap essay, custom essay to buy, buy custom written essay, buy a essay, buy essay now, buy essay writing, buy essay online, buy original essay, buy non-plagiarized essay, where to buy essay, buy a+ essay, buy a good essay, buy essay writer, buy a perfect essay, buy unique essay, to buy essay{% endblock %}
+
 {% block breadcrump %}
 <div class="breadcrumbs">
  <a href="{% url 'home' %}">Home</a>
