--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -1,6 +1,8 @@
 {% extends 'index.html' %}
 
-{% block meta_title %}Contact us{% endblock %}
+{% block meta_title %}Contact us | EssayCoffee.com{% endblock %}
+{% block meta_description %}EssayCoffee Contact us{% endblock %}
+{% block meta_keywords %}essaycoffee contact us, essaycoffee livechat, to contact, how to contact, call{% endblock %}
 
 {% block breadcrump %}
 <div class="breadcrumbs">
