--- a/templates/pages/cookie-policy.html
+++ b/templates/pages/cookie-policy.html
@@ -2,8 +2,8 @@
 
 {% block head_meta %}<meta name="robots" content="nofollow, noindex" />{% endblock %}
 
-{% block meta_title %}Cookie Policy{% endblock %}
-{% block meta_description %}{% endblock %}
+{% block meta_title %}Cookie Policy | EssayCoffee.com{% endblock %}
+{% block meta_description %}Cookie Policy review. Get more information about the best essay writing service you can find online!{% endblock %}
 {% block meta_keywords %}{% endblock %}
 
 {% block breadcrump %}
