--- a/templates/pages/coursework-writing.html
+++ b/templates/pages/coursework-writing.html
@@ -1,8 +1,8 @@
 {% extends 'index.html' %}
 
-{% block meta_title %}Coursework Writing{% endblock %}
-{% block meta_description %}{% endblock %}
-{% block meta_keywords %}{% endblock %}
+{% block meta_title %}Buy Coursework Online | EssayCoffee.com{% endblock %}
+{% block meta_description %}affordable courseworks for sale. Buy original non-plagiarised coursework on EssayCoffee.com!{% endblock %}
+{% block meta_keywords %}Coursework online, cheap coursework, buy, online, for free{% endblock %}
 
 {% block breadcrump %}
 <div class="breadcrumbs">
