--- a/templates/pages/custom-essays.html
+++ b/templates/pages/custom-essays.html
@@ -1,14 +1,14 @@
 {% extends 'index.html' %}
 
-{% block meta_title %}Service{% endblock %}
-{% block meta_description %}{% endblock %}
-{% block meta_keywords %}{% endblock %}
+{% block meta_title %}Custom Essays For Sale | EssayCoffee.com{% endblock %}
+{% block meta_description %}Buy high quality original custom essay paper that will meet your requirements and your professor’s expectations!{% endblock %}
+{% block meta_keywords %}Custom essay for sale, buy original essay, essay paper for sale, custom, cheap, online{% endblock %}
 
 {% block breadcrump %}
 <div class="breadcrumbs">
 	<a href="{% url 'home' %}">Home</a>
 	<span class="separator"><i class="fa fa-angle-right"></i></span>
-	<a href="{% url 'custom-essays' %}" class="active">Service</a>
+	<a href="{% url 'custom-essays' %}" class="active">Custom Essays</a>
 </div>
 {% endblock %}
 			
