--- a/templates/pages/disclaimer.html
+++ b/templates/pages/disclaimer.html
@@ -2,9 +2,9 @@
 
 {% block head_meta %}<meta name="robots" content="nofollow, noindex" />{% endblock %}
 
-{% block meta_title %}Disclaimer{% endblock %}
-{% block meta_description %}{% endblock %}
-{% block meta_keywords %}{% endblock %}
+{% block meta_title %}EssayCoffee Disclaimer | EssayCoffee.com{% endblock %}
+{% block meta_description %}General Disclaimer{% endblock %}
+{% block meta_keywords %}EssayCoffee disclaimer, general disclaimer, buy essay cheap{% endblock %}
 
 {% block breadcrump %}
 <div class="breadcrumbs">
