--- a/templates/pages/faq.html
+++ b/templates/pages/faq.html
@@ -2,9 +2,9 @@
 
 {% block head_meta %}<meta name="robots" content="nofollow, noindex" />{% endblock %}
 
-{% block meta_title %}Faq{% endblock %}
-{% block meta_description %}{% endblock %}
-{% block meta_keywords %}{% endblock %}
+{% block meta_title %}Frequently Asked Question | EssayCoffee.com{% endblock %}
+{% block meta_description %}Frequently asked questions about essay writing services{% endblock %}
+{% block meta_keywords %}faq, essay faq, how to order essay, revision, essay faq{% endblock %}
 
 {% block breadcrump %}
 <div class="breadcrumbs">
