--- a/templates/pages/money-back-guarantee.html
+++ b/templates/pages/money-back-guarantee.html
@@ -2,9 +2,9 @@
 
 {% block head_meta %}<meta name="robots" content="nofollow, noindex" />{% endblock %}
 
-{% block meta_title %}Money Back Guarantee{% endblock %}
-{% block meta_description %}{% endblock %}
-{% block meta_keywords %}{% endblock %}
+{% block meta_title %}Money back guarantee | EssayCoffee.com{% endblock %}
+{% block meta_description %}Money back guarantee for essay orders. Get to know more about our trusted essay writing service!{% endblock %}
+{% block meta_keywords %}money back guarantee, essaycoffee guarantees{% endblock %}
 
 {% block breadcrump %}
 <div class="breadcrumbs">
