--- a/templates/pages/plagiarism-free-guarantee.html
+++ b/templates/pages/plagiarism-free-guarantee.html
@@ -2,9 +2,9 @@
 
 {% block head_meta %}<meta name="robots" content="nofollow, noindex" />{% endblock %}
 
-{% block meta_title %}Plagiarism-Free Guarantee{% endblock %}
-{% block meta_description %}{% endblock %}
-{% block meta_keywords %}{% endblock %}
+{% block meta_title %}Plagiarism-Free Guarantee | EssayCoffee.com{% endblock %}
+{% block meta_description %}Plagiarism-free papers online. Buy plagiarism-free custom written paper on our website.{% endblock %}
+{% block meta_keywords %}Plagiarism-Free Guarantee, essay faq, essay questions, essay answers, essay f.a.q.{% endblock %}
 
 {% block breadcrump %}
 <div class="breadcrumbs">
