--- a/templates/pages/pricing.html
+++ b/templates/pages/pricing.html
@@ -2,9 +2,9 @@
 
 {% block head_meta %}<meta name="robots" content="nofollow, noindex" />{% endblock %}
 
-{% block meta_title %}Prices{% endblock %}
-{% block meta_description %}{% endblock %}
-{% block meta_keywords %}{% endblock %}
+{% block meta_title %}Custom writing service pricing at EssayCoffee | EssayCoffee.com{% endblock %}
+{% block meta_description %}Best prices for custom essay writing! We guarantee affordable, high quality papers that will meet your expectations!{% endblock %}
+{% block meta_keywords %}cheap essay, buy essay online, affordable prices, essay for free{% endblock %}
 
 {% block breadcrump %}
 <div class="breadcrumbs">
