--- a/templates/pages/privacy-policy.html
+++ b/templates/pages/privacy-policy.html
@@ -2,9 +2,9 @@
 
 {% block head_meta %}<meta name="robots" content="nofollow, noindex" />{% endblock %}
 
-{% block meta_title %}Privacy Policy{% endblock %}
-{% block meta_description %}{% endblock %}
-{% block meta_keywords %}{% endblock %}
+{% block meta_title %}Privacy Policy | EssayCoffee.com{% endblock %}
+{% block meta_description %}Privacy policy review.{% endblock %}
+{% block meta_keywords %}privacy policy, essay service, essaycoffee, essaycoffee.com{% endblock %}
 
 {% block breadcrump %}
 <div class="breadcrumbs">
