--- a/templates/pages/research-papers.html
+++ b/templates/pages/research-papers.html
@@ -1,8 +1,8 @@
 {% extends 'index.html' %}
 
-{% block meta_title %}Research Papers{% endblock %}
-{% block meta_description %}{% endblock %}
-{% block meta_keywords %}{% endblock %}
+{% block meta_title %}Custom Research Papers | EssayCoffee.com{% endblock %}
+{% block meta_description %}Our writers will be glad to assist you with your Research Paper. We guarantee that you will get high quality research paper!{% endblock %}
+{% block meta_keywords %}Custom Research Paper, custom, papers, research, online, buy, for sale{% endblock %}
 
 {% block breadcrump %}
 <div class="breadcrumbs">
