--- a/templates/pages/revisions-policy.html
+++ b/templates/pages/revisions-policy.html
@@ -2,9 +2,9 @@
 
 {% block head_meta %}<meta name="robots" content="nofollow, noindex" />{% endblock %}
 
-{% block meta_title %}Revision Policy{% endblock %}
-{% block meta_description %}{% endblock %}
-{% block meta_keywords %}{% endblock %}
+{% block meta_title %}Revision Policy | EssayCoffee.com{% endblock %}
+{% block meta_description %}Revision Policy review.{% endblock %}
+{% block meta_keywords %}Revision policy, revision essay, essaycoffee revision{% endblock %}
 
 {% block breadcrump %}
 <div class="breadcrumbs">
