--- a/templates/pages/term-papers.html
+++ b/templates/pages/term-papers.html
@@ -1,8 +1,8 @@
 {% extends 'index.html' %}
 
-{% block meta_title %}Term Papers{% endblock %}
-{% block meta_description %}{% endblock %}
-{% block meta_keywords %}{% endblock %}
+{% block meta_title %}Affordable Term papers | EssayCoffee.com{% endblock %}
+{% block meta_description %}buy high quality custom term paper written by expert exclusively for you at affordable price!{% endblock %}
+{% block meta_keywords %}term paper for sale,affordable custom term paper, buy, cheap, online{% endblock %}
 
 {% block breadcrump %}
 <div class="breadcrumbs">
