--- a/templates/pages/terms-conditions.html
+++ b/templates/pages/terms-conditions.html
@@ -2,8 +2,8 @@
 
 {% block head_meta %}<meta name="robots" content="nofollow, noindex" />{% endblock %}
 
-{% block meta_title %}Terms & Conditions{% endblock %}
-{% block meta_description %}{% endblock %}
+{% block meta_title %}Terms & Conditions | EssayCoffee.com{% endblock %}
+{% block meta_description %}Terms and Conditions for Essay Writing Service Customers{% endblock %}
 {% block meta_keywords %}{% endblock %}
 
 {% block breadcrump %}
