--- a/templates/orders/order_id.html
+++ b/templates/orders/order_id.html
@@ -160,9 +160,9 @@
       <a href="{% url 'order-id-edit' order.pk %}" class="btn btn-default">Edit</a>
     {% endif %}
     {% if not payments|is_bought:order.pk %}
-     <form action="{% url 'order-id-buy' order.pk %}" method="POST">
+     <form action="{% url 'order-id-buy' order.pk %}" method="POST" class="btn">
         {% csrf_token %}
-        <input type="hidden" name="status" value="{{co.UNPROCESSED}}">
+        <input type="hidden" name="status" value="{{co.DRAFT}}">
         <button class="btn btn-primary" >Buy ({{order.get_price}}$)</button>
      </form>
     {% endif %}
