Fixed minor issues

--- a/templates/orders/order_id.html
+++ b/templates/orders/order_id.html
@@ -94,7 +94,7 @@
 
       <tr>
        <th>Delivery</th>
-       <td class="momdl">{{order.writer_deadline}}
+       <td class="momdl">{{order.admin_deadline}}
         {% comment %}
         <a href="#" class="btn-extend" data-toggle="modal" data-target="#modalExtend">
          <span class="fa-stack">
