Fixed apache conf

--- a/templates/orders/new-order.html
+++ b/templates/orders/new-order.html
@@ -479,7 +479,7 @@ var displayPrice = function() {
 
 	try {
 	  var pagePrice = getData(assigment).prices[urgency][level];
-	  if (pagePrice === 0) {
+	  if (pagePrice === 0 || pagePrice === undefined) {
 		$('label.js-total-price').html('Configuration is not correct.');
 	  } else {
 		// Якщо число від'ємне
