Fixed minor issues with payment

--- a/templates/orders/order_id.html
+++ b/templates/orders/order_id.html
@@ -43,6 +43,10 @@
        <th width="155px">Order</th>
        <td>{{order.pk}}</td>
       </tr>
+      <tr>
+       <th width="155px">Status</th>
+       <td>{{order.get_status}}</td>
+      </tr>
 
       <tr>
        <th>Topic</th>
