Fixed minor issues

--- a/templates/orders/msgs_tab.html
+++ b/templates/orders/msgs_tab.html
@@ -48,8 +48,8 @@
        <div class="col-md-4 col-sm-4 col-xs-12">
         <select name="visibility" class="form-control" required>
          <option value="0" disabled selected="selected">Please select</option>
+         <option value="{{co.MSGS_ADM}}" >Support</option>
          <option value="{{co.MSGS_WRITER}}" >Writer</option>
-         <option value="{{co.MSGS_ADM}}" >Admin&Editor</option>
         </select>
        </div>
       </div>
