--- a/templates/profile/profile.html
+++ b/templates/profile/profile.html
@@ -16,17 +16,7 @@
 {% endblock %}
 
 {% block sidebar_right %}
-<div id="layout-right" class="col-md-3 col-sm-12">
- <section class="sibebar-section">
-  <ul class="list-group">
-   <li class="list-group-item"><a href="{% url 'my-orders' %}">My Orders</a></li>
-   <li class="list-group-item active"><a href="{% url 'my-account' request.user.pk %}">My account</a></li>
-   <li class="list-group-item"><a href="{% url 'password-change' %}">Password change</a></li>
-   <li class="list-group-item"><a href="{% url 'logout' %}">Exit</a></li>
-  </ul>
- </section>
-</div>
-
+	{% include 'html/sidebar-account.html' %}
 {% endblock %}
 
 {% block content %}
