--- a/templates/orders/my-orders.html
+++ b/templates/orders/my-orders.html
@@ -30,6 +30,7 @@
  <ul class="nav nav-tabs" role="tablist">
   <li class="active"><a href="#draft" role="tab" data-toggle="tab">Draft ({{draft_tasks|length}})</a></li>
   <li><a href="#processing" role="tab" data-toggle="tab">Processing ({{proc_tasks|length}})</a></li>
+  <li><a href="#rejected" role="tab" data-toggle="tab">Rejected ({{proc_tasks|length}})</a></li>
   <li><a href="#completed" role="tab" data-toggle="tab">Completed ({{completed_tasks|length}})</a></li>
  </ul>
  
@@ -125,6 +126,48 @@
      </table>
    </div>
   </div><!-- End Processing Tab -->
+  
+  <!-- Begin Rejected Tab -->
+  <div class="tab-pane" id="rejected">
+   <div class="table-responsive">
+     <table class="table table-striped table-bordered tablesorter">
+      <thead>
+       <tr>
+        <th>Order #</th>
+        <th>Order name</th>
+        <th>Writer</th>
+        <th>Created date</th>
+        <th>Deadline</th>
+        <th>Revision</th>
+        <th>Price</th>
+        <th>Actions</th>
+       </tr>
+      </thead>
+      <tbody>
+      {% for order in proc_tasks %}
+       <tr>
+        <td>{{order.pk}}</td>
+        <td><a href="{% url 'order-id' order.pk %}">{{order.paper_title}}</a></td>
+        <td>{{order.assignee.username}}</td>
+        <td>{{order.created}}</td>
+        <td class="momdl">{{order.admin_deadline}}</td>
+        <td>{{order.revision}}</td>
+        <td>{{order.get_price}}$
+          <div>{{payments|get_order_status:order.pk}}</div>
+        </td>
+        <td align="center">
+         <a href="{% url 'order-id' order.pk %}" class="order-action-btn order-search"></a>
+         {% if order|check_perm:"can_edit" %}<a href="{% url 'order-id-edit' order.pk %}" title="View" class="order-action-btn order-edit"></a>{% endif %}
+         {# {% if order|check_perm:"can_delete" %}<a href="{% url 'order-id-delete' draft.pk %}" title="Edit" class="order-action-btn order-remove"></a>{% endif %} #}
+        </td>
+       </tr>
+       {% empty %}
+       <tr><td colspan="8">No orders yet.</td></tr>
+       {% endfor %}
+      </tbody>
+     </table>
+   </div>
+  </div><!-- End Rejected Tab -->
 
   <!-- Begin Completed Tab -->
   <div class="tab-pane" id="completed">
