--- a/templates/orders/files_tab.html
+++ b/templates/orders/files_tab.html
@@ -13,7 +13,7 @@
       {% for upload in uploads %}
         <tr>
          <td>{{upload.created}}</td>
-         <td><a href="{% url 'order-upload-download' upload.pk %}">{{upload.attach}}</a></td>
+         <td><a href="{% url 'order-upload-download' upload.pk %}">{{upload.get_filename}}</a></td>
          <td>{% if not upload.access_level %}Private{% else %}Public{% endif %}</td>
         </tr>
       {% empty %}
