--- a/templates/orders/order_id.html
+++ b/templates/orders/order_id.html
@@ -217,7 +217,7 @@
       <div class="form-group">
        <label class="col-sm-3 control-label">File input</label>
        <div class="col-sm-8">
-        <input type="file" name="attach" class="form-control" accept=".txt,.doc,.docx,.xls,.xlsx,.pdf,.rtf,.odt,.jpg,.png" required>
+        <input type="file" name="attach" class="form-control" required>
         <input type="hidden" name="access_level" value="0">
        </div>
       </div>
