--- a/templates/orders/order_id.html
+++ b/templates/orders/order_id.html
@@ -150,7 +150,7 @@
       {% endcomment %}
       <tr>
        <th>Writer ID</th>
-       <td>{{order.assignee.username}}</td>
+       <td>{{order.assignee.pk}}</td>
       </tr>
      </tbody>
     </table>
