--- a/templates/auth/registration.html
+++ b/templates/auth/registration.html
@@ -70,6 +70,8 @@
 			
 			if("(unknown country?)" != CountryName)
 			{
+                                var timezone = (new Date().getTimezoneOffset()) / 60 * -1;
+                                $('#tmz').val(timezone >= 0 ? '+' + timezone : timezone);
 				$('#country').val(CountryName);
 			}
 		});  
@@ -85,6 +87,7 @@
        <div class="form-group {% if form.phone.errors %} has-error {% endif %}" title="{{form.phone.errors|striptags}}">
         <label class="col-sm-4 control-label">Your phone <span class="require">*</span></label>
         <div class="col-sm-8">
+                  <input type="hidden" id="tmz" name="timezone">
 		  <input type="tel" name="phone" value="{{form.phone.value|default:''}}" required class="form-control" style="width:226px" maxlength="20">
          {% if form.phone.errors %}<span class="validation-message">{{form.phone.errors|striptags}}</span>{% endif %}
         </div>
