--- a/templates/orders/my-orders.html
+++ b/templates/orders/my-orders.html
@@ -30,6 +30,7 @@
  <ul class="nav nav-tabs" role="tablist">
   <li class="active"><a href="#draft" role="tab" data-toggle="tab">Draft ({{draft_tasks|length}})</a></li>
   <li><a href="#processing" role="tab" data-toggle="tab">Processing ({{proc_tasks|length}})</a></li>
+  <li><a href="#rejected" role="tab" data-toggle="tab">Rejected ({{rejected_tasks|length}})</a></li>
   <li><a href="#completed" role="tab" data-toggle="tab">Completed ({{completed_tasks|length}})</a></li>
  </ul>
  
@@ -58,7 +59,7 @@
         <td>{% if draft.assignee.username %}{{draft.assignee.pk}}{% else %}-{% endif %} </td>
         <td>{{draft.created}}</td>
         <td class="momdl">{{draft.admin_deadline}}</td>
-        <td>{{draft.revision}}</td>
+        <td>{%if draft.revision%}On revision{% else %}-{%endif %}</td>
         <td>{{draft.get_price}}$
           {% if not payments|is_bought:draft.pk %}
           <form action="{% url 'order-id-buy' draft.pk %}" method="POST">
@@ -108,7 +109,7 @@
         <td>{{order.assignee.pk}}</td>
         <td>{{order.created}}</td>
         <td class="momdl">{{order.admin_deadline}}</td>
-        <td>{{order.revision}}</td>
+        <td>{%if order.revision%}On revision{% else %}-{%endif %}</td>
         <td>{{order.get_price}}$
           <div>{{payments|get_order_status:order.pk}}</div>
         </td>
@@ -125,6 +126,56 @@
      </table>
    </div>
   </div><!-- End Processing Tab -->
+
+  <!-- Begin Rejected Tab -->
+  <div class="tab-pane" id="rejected">
+   <div class="table-responsive">
+     <table class="table table-striped table-bordered tablesorter">
+      <thead>
+       <tr>
+        <th>Order #</th>
+        <th>Order name</th>
+        <th>Writer</th>
+        <th>Created date</th>
+        <th>Deadline</th>
+        <th>Revision</th>
+        <th>Price</th>
+        <th>Actions</th>
+       </tr>
+      </thead>
+      <tbody>
+      {% for draft in rejected_tasks %}
+       <tr>
+        <td>{{draft.pk}}</td>
+        <td><a href="{% url 'order-id' draft.pk %}">{{draft.paper_title}}</a></td>
+        <td>{% if draft.assignee.username %}{{draft.assignee.pk}}{% else %}-{% endif %} </td>
+        <td>{{draft.created}}</td>
+        <td class="momdl">{{draft.admin_deadline}}</td>
+        <td>{%if draft.revision%}On revision{% else %}-{%endif %}</td>
+        <td>{{draft.get_price}}$
+          {% if not payments|is_bought:draft.pk %}
+          <form action="{% url 'order-id-buy' draft.pk %}" method="POST">
+            <input type="hidden" name="status" value="{{co.DRAFT}}">
+            {% csrf_token %}
+            <button class="btn btn-primary btn-xs" type="submit">Pay now</button>
+          </form>
+          {% else %}
+            <span>{% with payment as payments|dget:draft.pk %}{{payment.0}}{% endwith  %}</span>
+          {% endif %}
+        </td>
+        <td align="center">
+         <a href="{% url 'order-id' draft.pk %}" class="order-action-btn order-search"></a>
+         {% if draft|check_perm:"can_edit" %}<a href="{% url 'order-id-edit' draft.pk %}" class="order-action-btn order-edit"></a>{% endif %}
+         {# {% if draft|check_perm:"can_delete" %}<a href="{% url 'order-id-delete' draft.pk %}" class="order-action-btn order-remove"></a>{% endif %} #}
+        </td>
+       </tr>
+       {% empty %}
+       <tr><td colspan="8">No orders yet.</td></tr>
+       {% endfor %}
+      </tbody>
+     </table>
+   </div>
+  </div><!-- End Rejected Tab -->
 
   <!-- Begin Completed Tab -->
   <div class="tab-pane" id="completed">
@@ -150,7 +201,7 @@
         <td>{{order.assignee.username}}</td>
         <td>{{order.created}}</td>
         <td class="momdl">{{order.admin_deadline}}</td>
-        <td>{{order.revision}}</td>
+        <td>{%if order.revision%}On revision{% else %}-{%endif %}</td>
         <td>{{order.get_price}}$</td>
         <td align="center">
          <a href="{% url 'order-id' order.pk %}" class="order-action-btn order-search"></a>
